refactored update user endpoint
